LRDOCS-10142 update DXP ja folder installation-and-upgrades